Replace deprecated URL(String) constructors with URI.create(...).toURL()
This avoids additional deprecation warnings.

Fixes #1453

Signed-off-by: Thomas Darimont <thomas.darimont@oidf.org>